fix: resolve line-height issue that was creating gap benearth theme screenshots

--- a/assets/src/css/admin/forms.scss
+++ b/assets/src/css/admin/forms.scss
@@ -493,6 +493,7 @@ Shortcode Copy & Paste
 				background: #fafafa;
 				border: 1px solid #ccd0d4;
 				box-shadow: 0 1px 1px rgba(0, 0, 0, 0.07);
+				line-height: 0;
 			}
 
 			&.has-activated-theme {
